# ltc-dashboard

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md  SOURCES.md  USAGE.md  app.py  pyproject.toml  requirements.txt  長照供需分析.ipynb  長照供需分析_書面報告.docx
.github/workflows/: update-data.yml
.streamlit/: config.toml
data/processed/: aging_index_timeseries.csv  county_master.csv  forecast_aging_index.csv  forecast_bed_demand_2030.csv  forecast_method_backtest.csv  forecast_method_comparison.csv  ltc_coverage.csv  ltc_resources.csv  ml_feature_importance.csv  ml_model_scores.csv  ml_predictions.csv  risk_comparison.csv
data/raw/: 14226_population_single_age.csv  disability_by_age_county.xls  disability_by_type_county.xls  ris_aging_index_by_county.xls
data/raw/elderly_institutions_8572/: 南投縣.csv  嘉義市.csv  嘉義縣.csv  基隆市.csv  宜蘭縣.csv  屏東縣.csv  彰化縣.csv  新北市.csv  新竹市.csv  新竹縣.csv  桃園市.csv  澎湖縣.csv  臺中市.csv  臺北市.csv  臺南市.csv  臺東縣.csv  花蓮縣.csv  苗栗縣.csv  連江縣.csv  金門縣.csv  雲林縣.csv  高雄市.csv
scripts/: add_coverage_section.py  build_db.py  build_master.py  download_data.py  explore.py  make_charts.py  ml_supply_gap.py  parse_ltc_pdfs.py  timeseries_compare.py
